# PingPang

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: README.md
scripts/: bootstrap.ps1
src/team_workspace/: __main__.py
