[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-workspace"
version = "0.1.0"
description = "Shared team repository for code and documentation."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = []

[project.scripts]
team-workspace = "team_workspace.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/team_workspace"]
